[design] test ls.